--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
-  text-align: center;
+html,
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  padding: 0%;
+  margin: 0%;
+}
+.container {
+  margin: 80px auto 0 auto;
+  max-width: 1200px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*
+NAVBAR STYLES
+*/
+.navbar {
   display: flex;
-  flex-direction: column;
+  background: linear-gradient(#e89ac7, #f394d3);
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 40px;
+  height: 80px;
+}
+.logo-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.logo-container {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.logo {
+  width: 45px;
+  height: 45px;
+}
+.nav-options {
+  padding-left: 25px;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 50px;
+  list-style-type: none;
+}
+.mobile-option {
+  display: none;
+}
+.mobile-menu {
+  display: none;
+}
+
+.option :hover {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.signin-up {
+  display: flex;
+  padding: 0px 5px;
+  list-style-type: none;
+}
+.sign-in {
+  padding-right: 50px;
+  align-self: center;
+}
+.sign-in :hover {
+  color: white;
+}
+.signup-btn {
+  padding: 10px 10px;
+  height: 2.4rem;
+  border-radius: 3px;
+  background: rgb(222, 9, 241);
+  color: white;
+  cursor: pointer;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* LIST STYLE*/
+.character-list {
+  margin: 25px;
+  padding: 0;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  grid-gap: 15px;
+}
+.character-li {
+  border-radius: 20px;
+  overflow: hidden;
+  padding-bottom: 15px;
+  background: #fff;
+  box-shadow: 0 0 10px hsl(0, 0%, 90%);
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.character-img {
+  display: block;
+  max-width: 100%;
+  margin-bottom: 15px;
+}
+
+/* LOGIN FORM */
+.login-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  margin: 0;
+  padding: 0;
+  background: rgb(222, 9, 241);
+}
+
+.login-form {
+  margin: 0;
+  padding: 0;
+  grid-column: 3 / 11;
+}
+
+.login-item {
+  grid-column: 3 / 11;
+  overflow: hidden;
+  padding-bottom: 15px;
+  background: #fff;
+  box-shadow: 0 0 10px hsl(0, 0%, 90%);
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.login-input {
+  width: 80%;
+  padding: 15px 22px;
+  margin: 10px 5px;
+  box-sizing: border-box;
+}
+
+.login-button {
+  margin: 0;
+  padding: 0;
 }
